<resources>
    <string name="appbar_title">AppBar with Context Menu</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="option_one">Option 1</string>
    <string name="option_two">Option 2</string>
    <string name="option_three">Option 3</string>
    <string name="settings_selected">Settings selected</string>
    <string name="about_selected">About selected</string>
    <string name="option_one_selected">Option 1 selected</string>
    <string name="option_two_selected">Option 2 selected</string>
    <string name="option_three_selected">Option 3 selected</string>
    <string name="context_menu_prompt">Long press here to open the context menu</string>
    <string name="app_name">Activities Button</string>
    <string name="pop_up_menu">Pop Up Menu</string>
    <string name="menu_1">Menu 1</string>
    <string name="menu_2">Menu 2</string>
    <string name="menu_3">Menu 3</string>
    <string name="more">Menu</string>
    <string name="title">GOOD JOB!</string>
    <string name="mini">You clicked the Button</string>
    <string name="ok">OK</string>
    <string name="oks">OK na</string>
    <string name="app_bar">Appbar with Context Menu</string>
    <string name="con_menu">Contextual Menu</string>
    <string name="popup_menu">Popup Menu</string>
    <string name="dialogs">Dialogs</string>
    <string name="pickers">Pickers</string>
    <string name="button_text">Pick Date</string>
    <string name="selected_date_label">Selected Date: None</string>
    <string name="selected_date">Selected Date: %1$s</string>

    <string name="tcu">TCU</string>
    <string name="cict">CICT</string>
    <string name="profile">My Profile</string>

    <string name="tabfrags">Tab Fragments</string>

    <string name="tcuarticle">Pamantasan ng Lungsod ng Taguig (PLT), later renamed Taguig City University (TCU) upon conversion of the Municipality of Taguig to "cityhood" on 8 December 2004, was established through Ordinance
        No. 29, Series of 2004 (enacted 6 September 2004, Municipal Government of Taguig, authored by Councilor</string>
    <string name="tcuarticle2">Aurelio Paulo R. Bartolome with councilors Marisse Balina-Eron and Allan Paul C. Cruz as co-sponsors).
        Motivated by the urgency of need to serve the youth of growing Taguig City, the Local Government Administration came up with Ordinance No. 29 Series of 2004 "An Ordinance Establishing the Pamantasan ng Taguig and Appropriating Funds Thereof."</string>
    <string name="tcuarticle3">This was an offshoot of the provisions of the Local Government Code.
        Pamantasan ng Taguig was renamed Taguig City University pursuant to City Ordinance No.13, Series of 2009.
        TCU has gone through development problems — top billed by the very basic need to have enough buildings. For two years, despite its courage, the university hardly manifested physical eloquence.</string>
    <string name="tcuarticle4">In S.Y. 2006–2007, it swiftly took off:
        The organization of the university and construction of the TCU main building commenced. Meanwhile, undergraduate classes were held in high schools and elementary campuses in Taguig, lent to the growing management of TCU.</string>
    <string name="tcuarticle5">In 2006, General Ricardo Papa Sr. Memorial High School offered some rooms for free. In 2007, rooms expanded to Taguig Elementary School, Sta. Ana-District 1 and Em s Elementary School, Signal Village-District 2.
        In 2008-2009 additional undergraduate classes were held in annex school of General Ricardo Papa Sr. Memorial High School at Brgy. Ususan and Signal Village Elementary School (Annex).</string>
    <string name="tcuarticle6">Lack of classrooms did not deter the holding of graduate school classes. The graduate program in Master of Arts in Teaching major in Mathematics, Filipino, English and
        Social Sciences were lumped together as a common major. It paved the way to the development of the Master of Arts in Educational Management, while holding classes in a secluded and secured room at Sunshine Mall Taguig.</string>
    <string name="cictarticle">ANNOUNCEMENT
        TCU Confirmation of Enrollment A.Y. 2023-2024-Summer
        Welcome to Taguig City University Confirmation of Enrollment. This Form is open only for TCU Students Enrolled from A.Y. 2022-2023 - 2nd Semester who want to Confirm his/her Enrollment for A.Y. 2023-2024 - Summer.
        This form is open until June 11, 2023, ONLY. Please be reminded that only those who confirmed their Enrollment will be assessed by their course evaluator.
        Please keep in mind the submission of this form is not equivalent to the approval of your enrollment for the summer semester.
        Note: Please be informed that all your data disclosed herein (e.g. email address, contact number) will be protected in compliance with the Data Privacy Act of 2012. By filling out the form, you confirm that you fully and voluntarily give consent to the collection of such data.</string>

    <string name="button">Update Profile</string>
    <string name="pass">Password</string>
    <string name="email">Email</string>
    <string name="lastname">Last Name</string>
    <string name="firstname"> First Name</string>
</resources>

