<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:orientation="vertical"
    android:gravity="center">


    <Button
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/app_bar"
        android:backgroundTint="@color/green"
        app:cornerRadius ="10dp"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/contextual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/con_menu"
        android:backgroundTint="@color/green"
        app:cornerRadius ="10dp"
        android:textColor="@color/white"
        />
    <Button
        android:id="@+id/popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/popup_menu"
        android:backgroundTint="@color/green"
        app:cornerRadius ="10dp"
        android:textColor="@color/white"
        />
    <Button
        android:id="@+id/dialogs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/dialogs"
        android:backgroundTint="@color/green"
        app:cornerRadius ="10dp"
        android:textColor="@color/white"
        />
    <Button
        android:id="@+id/pickers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/pickers"
        android:backgroundTint="@color/green"
        app:cornerRadius ="10dp"
        android:textColor="@color/white"
        />


</LinearLayout>
