<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:inputType="text"
            android:background="@drawable/rectanglebox"
            android:hint="@string/firstname"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:inputType="text"
            android:background="@drawable/rectanglebox"
            android:hint="@string/lastname"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/editTextText"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/rectanglebox"
            android:hint="@string/email"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/editTextText2"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/editTextText4"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:inputType="textPassword"
            android:background="@drawable/rectanglebox"
            android:hint="@string/pass"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/editTextText3"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:text="@string/button"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/editTextText4"
            android:layout_marginTop="30dp" />
    </RelativeLayout>
</RelativeLayout>
