<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/good_job"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="25sp"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="@id/dialog"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/description"
            android:gravity="center_horizontal"
            android:textSize="15sp"
            android:text="@string/mini"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/good_job"
            app:layout_constraintBottom_toTopOf="ok"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ok"
            android:textSize="15sp"
            app:cornerRadius = "12dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="170dp"
            android:layout_marginEnd="40dp"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:backgroundTint="@color/green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/icon"
        android:src="@drawable/check"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="180dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/dialog"/>
</androidx.constraintlayout.widget.ConstraintLayout>